tests/fixtures/diagnostics/type-checker/negative/satisfies-shape-mismatch/input.tysh
namespace Samples.Satisfies.Negative

record HasAge(Age: int)

type Named = { Name: string }

fun invalid(value: HasAge): HasAge =
  value satisfies Named
